--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <h1> welcome  </h1> <br>
       <a href="page2.html">link to next page </a>
 
+      <br>
+        <a href="essay/index.html">Essay link</a>
+
 
 
 
