--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       <a href="page2.html">link to next page </a>
 
       <br>
-        <a href="essay/index.html">Essay link</a>
+        <a href="essay/index.html">Essay </a>
+
+        <br>
+     <a href="Maxbook/index.html">Maximum Book </a>
 
 
 
