--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Name of website</title>
+	<title>SPENDER</title>
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/grid.css">
@@ -17,9 +17,18 @@
 
 
 	<!-- add your code here -->
-	<marquee behavior="scroll" direction="left" class="top">WELCOME SHOPPING WITH ME </marquee>
+		<div class="nav">
+  Click
+</div>
 
-	<marquee behavior="scroll" direction="right" class="top">WELCOME SHOPPING WITH ME </marquee>
+
+<div class="Click">
+  <div class="Click__list">
+    <a href="essay.html"> essay </a>
+     <br>  <a href="book.html"> maximum book </a>
+  </div>
+</div>
+
 
 	  <div class="marquee3k marquee-left-top" data-speed="1" data-reverse="bool">
 		 <h1>WELCOME SHOPPING WITH ME </h2>
@@ -39,16 +48,7 @@
     </div>
 
 
-	<div class="nav">
-  Click
-</div>
 
-
-<div class="Click">
-  <div class="Click__list">
-    <a href="essay.html">essay</a> <br> <br> real book 
-  </div>
-</div>
 
 
 
